--- a/README
+++ b/README
@@ -33,10 +33,11 @@ e.g. bx=4, allows us to have 257 KiB of code (257 - 1.5) KiB of kernel code.
 [x] jump to C kernel
 [x] bigger kernel
 [x] VGA and uart
-[] keyboard interrupt
-[] timer interrupt
+[] setup idt
+   - [] keyboard interrupt
+   - [] timer interrupt
 [] change preset pagetable in kernel
-[] kernel pagetable in C
+   - [] kernel pagetable in C
 [] kernel memory allocation
 [] scheduling
 [] user process
