--- a/README
+++ b/README
@@ -56,7 +56,8 @@ The procedure is as follows.
 [] change preset pagetable in kernel
    - [] kernel pagetable in C
 [] kernel memory allocation
+[] process
 [] scheduling
-[] user process
+[] user space
 [] trap
 
