--- a/README
+++ b/README
@@ -78,8 +78,8 @@ The procedure is as follows.
 [x] logger
    - [x] printf
    - [x] logging w/ file name & line number
-[] kernel memory allocation
-   - [] mmu
+[x] kernel memory allocation
+   - [x] mmu
 [] switch kernel pgtbl when entered C
    - [] page table walk
    - [] page table setup and write to cr3
